exemples/practica-final/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
  - host: elmeublog.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servei-wordpress
            port:
              number: 80
